# fastapi_basic

./: README.md  pyproject.toml
fastapi_01/: main.py
tests/: test_main.py
